--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jp-website",
+  "name": "jungpil",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,17 +7,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
-    "firebase": "^9.22.0",
+    "firebase": "^9.22.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.60.0",
+    "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
